# nsketch

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  devBuild.sh  install.sh  main.cpp  mergeDev.sh  runTests.sh  texturesBuild.sh
data/conf/: dev.md
data/run-logs/: dev.md
data/textures/: tex-base-dark.gph  tex-base-light.gph  uiTexPack.gph
include/nsketch/: appManager.h  bTools.h  canvas.h  dev.md  interface.h  iokey.h  sketch.h  tool.h  toolReg.h  toolStore.h  tools.h  uiCanv.h  uiTex.h
include/nsketch/bTools/: eraser.h  fillSlct.h  mvCursor.h  pencil.h
include/nsketch/gph/: canvas.h  iotex.h  texture.h
include/nsketch/sketch/: cursor.h  palette.h  sketch.h
include/nsketch/tool/: interface.h  tool.h  toolReg.h  toolStore.h
src/: CMakeLists.txt  dev.md  main.cpp
src/appManager/: appManager.cpp  appManagerImpl.h  globalBinds.cpp  globalBinds.h  uiCanv.cpp  uiTex.cpp  uiTex.h
src/basicTools/: eraser.cpp  fillSlct.cpp  mvCursor.cpp  pencil.cpp
src/graphics/: canvas.cpp  gphUtil.cpp  gphUtil.h  grid.cpp  grid.h  iotex.cpp  texture.cpp
src/iokey/: iokey.cpp
src/sketch/: cursor.cpp  cursor.h  matrix.cpp  matrix.h  palette.cpp  select.cpp  sketch.cpp
src/tool/: interface.cpp  tool.cpp  toolReg.cpp  toolStore.cpp  tools.cpp
src/tools/: interface.cpp  tools.cpp
tests/: CMakeLists.txt  gphTest.cpp  sketchTest.cpp  toolTest.cpp
texEditor/: CMakeLists.txt  interface.cpp  interfaceDark.cpp  interfaceLight.cpp
